eu-kubernetes-workload-example/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: fastapi-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: miapp.local
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: fastapi-frontend
                port:
                  number: 80
          - path: /metrics
            pathType: Prefix
            backend:
              service:
                name: fastapi-backend
                port:
                  number: 8000
